--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+
+nav a.active{
+  text-decoration: none;
+  font-weight: bold;
+}
+.pagination {
+  cursor: pointer;
+  display: inline-block;
+  margin: 1em 0;
+  margin-left: 5em;
+}
+.controls{
+  margin-top: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.pagination a.active {
+  background-color: #4caf50;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+}
+.search{
+  width: 100%;
+  display: flex;
+  margin: 1%;
+}
+.search button{
+  height: 45px;
+  width: 20%;
+  margin-left: 1%;
+  background-color: #59a6e0;
+  color: white;
+  border: none;
+}
+.search input{
+  width: 70%;
+    height: 45px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.favlenght{
+  
+  width: 20%;
+  background: #1493ed;
+  height: 40px;
+  text-align: center;
+  color: white;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 10px auto;
+
 }
